# agntrick-toolkit

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/agntrick_toolbox/: __init__.py  config.py  executor.py  manifest.py  path_utils.py  server.py
src/agntrick_toolbox/schemas/: __init__.py
src/agntrick_toolbox/tools/: __init__.py  data.py  document.py  git.py  hackernews.py  media.py  search.py  shell.py  utils.py  web.py
tests/: __init__.py  conftest.py  test_executor.py  test_manifest.py  test_path_utils.py  test_server.py
tests/test_tools/: test_data.py  test_document.py  test_git.py  test_hackernews.py  test_media.py  test_search.py  test_shell.py  test_utils.py  test_web.py
