[project]
name = "agntrick-toolbox"
version = "0.1.0"
description = "Docker-based MCP server providing curated CLI tools for LLM agents"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "ddgs>=9.5.2",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.scripts]
toolbox-server = "agntrick_toolbox.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
agntrick-toolbox = { workspace = true }

[dependency-groups]
dev = [
    "agntrick-toolbox",
    "beautifulsoup4>=4.14.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
